# data-forge

./: .gitignore  README.md  docker-compose.yml  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  erd.py  export.py  generate.py  health.py  preview.py  relations.py  schema.py  templates.py
backend/app/constants/: distributions.py  field_types.py  templates.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/dependencies/: faker_provider.py
backend/app/exceptions/: __init__.py  custom.py  handlers.py
backend/app/exports/: __init__.py  csv_exporter.py  excel_exporter.py  json_exporter.py  sql_exporter.py
backend/app/generators/: analytics_generator.py  erd_generator.py  field_generator.py  relational_generator.py  sql_generator.py  table_generator.py  template_generator.py
backend/app/middleware/: observability.py  payload_guard.py
backend/app/schemas/: generation.py
backend/app/services/: analytics_service.py  export_service.py  generation_service.py  template_service.py
backend/app/utils/: memory.py  sanitize.py
backend/tests/: test_api.py  test_exports.py  test_generators.py
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataGrid.tsx  ERDiagram.tsx  ExportPanel.tsx  FieldRow.tsx  (+5 more)
(+23 files in other folders)
