[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforge-backend"
version = "1.0.0"
description = "DataForge — Smart Test Data Generation Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "faker>=26.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
    "psutil>=6.0.0",
    "python-multipart>=0.0.9",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "rstr>=3.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
